// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default: settings 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "backportBranchName": "backport/{{targetBranch}}-{{refValues}}",
  "commitConflicts": true,
  "prTitle": "{{sourcePullRequest.title}} (backport #{{sourcePullRequest.number}})",
  "targetBranchChoices": [
    "main",
  ],
  "targetPRLabels": [
    "backport",
    "auto-approve",
  ],
}
`;

exports[`default: workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: backport
on:
  pull_request_target:
    types:
      - labeled
      - closed
jobs:
  backport:
    name: Backport PR
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - name: Backport Action
        if: github.event.pull_request.merged == true && !(contains(github.event.pull_request.labels.*.name, 'backport'))
        uses: sqren/backport-github-action@v9.5.1
        with:
          github_token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          auto_backport_label_prefix: backport-to-
"
`;

exports[`no labels on backport PRs uses the backport branch name to detect backport PRs: workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: backport
on:
  pull_request_target:
    types:
      - labeled
      - closed
jobs:
  backport:
    name: Backport PR
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - name: Backport Action
        if: github.event.pull_request.merged == true && !startsWith(github.head_ref, 'backport/'))
        uses: sqren/backport-github-action@v9.5.1
        with:
          github_token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          auto_backport_label_prefix: backport-to-
"
`;

exports[`non-default settings: settings 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "backportBranchName": "auto-backport/{{targetBranch}}-{{refValues}}",
  "commitConflicts": false,
  "prTitle": "{{sourcePullRequest.title}} (backport #{{sourcePullRequest.number}})",
  "targetBranchChoices": [
    "one",
    "two",
  ],
  "targetPRLabels": [
    "magic",
  ],
}
`;

exports[`non-default settings: workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: other-backport
on:
  pull_request_target:
    types:
      - labeled
      - closed
jobs:
  backport:
    name: Backport PR
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - name: Backport Action
        if: github.event.pull_request.merged == true && !(contains(github.event.pull_request.labels.*.name, 'magic'))
        uses: sqren/backport-github-action@v9.5.1
        with:
          github_token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          auto_backport_label_prefix: copy-to-
"
`;
